# slm_train

./: .gitignore  PROMPT  README.md  data.txt  pyproject.toml  requirements.txt  run_inference.py  serve.py  train.py  train_local_llm.py
